--- a/public/index.html
+++ b/public/index.html
@@ -3,9 +3,10 @@
 <head>
   <meta charset="UTF-8">
   <title>5 Day Weather Forecast</title>
+  <link rel="stylesheet" type="text/css" href="/css/styles.css">
 </head>
-<body>
-  <input id="userInput" type="text"></input>
+<body id="body">
+  <input id="userInput" placeholder="US City" type="text"></input>
 
   <button id="trigger">Get 5 Day Forecast</button>
 
