adds container div

--- a/public/index.html
+++ b/public/index.html
@@ -4,14 +4,17 @@
   <meta charset="UTF-8">
   <title>5 Day Weather Forecast</title>
   <link rel="stylesheet" type="text/css" href="/css/styles.css">
+  <link href='https://fonts.googleapis.com/css?family=Dosis' rel='stylesheet' type='text/css'>
 </head>
 <body id="body">
+  <header id="cityName"></header>
+  <div id="container"></div>
   <input id="userInput" placeholder="US City" type="text"></input>
 
   <button id="trigger">Get 5 Day Forecast</button>
 
   <div id="displayData"></div>
-
+  </div>
   <script type="text/javascript" src="/js/client.js"></script>
 </body>
 </html>
